lib/tests/fixtures/compiler/parser/next_in_parameter.pp
function foo($param = if true { next }) {

}
